--- a/src/templates/start.html
+++ b/src/templates/start.html
@@ -1,3 +1,5 @@
 <div id="app">
-  {{ message }}
+  <input type='text' v-model="email" placeholder="Email">
+  <input type="password" v-model="password" placeholder="Password">
+  <button v-on:click="login">Log In</button>
 </div>
